fix lp scrollbars

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -37,7 +37,8 @@
 } */
 
 body {
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 @keyframes float {
